Fixed some design issues on iOS.

--- a/src/client/assets/styles/map/Leaflet.scss
+++ b/src/client/assets/styles/map/Leaflet.scss
@@ -69,13 +69,13 @@
 
 .Map_map__vPSDC{
   height: calc(100vh - 72px)!important;
-  @media screen and (max-width: 1024px) {
-    height: calc(100vh - 95px)!important;
+  @media screen and (max-width: 1420px) {
+    height: calc(100vh - 50px)!important;
     // top: 70px;
   }
 
   @media screen and (max-width: 500px) {
-    height: calc(100vh - 165px)!important;
+    height: calc(100vh - 120px)!important;
     // top: 70px;
   }
 }
