--- a/src/client/assets/styles/shared/DepartureAdvisor.scss
+++ b/src/client/assets/styles/shared/DepartureAdvisor.scss
@@ -8,8 +8,10 @@
   display: flex;
   flex-direction: column;
   color: whitesmoke;
-  padding-bottom: 10px;
-
+  padding-bottom: 4px;
+  @supports (-webkit-touch-callout: none) {
+    padding-bottom: 24px; 
+  }
   .bars-container{
     display: flex;
     width: 60px;
